--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,10 +56,13 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scenes\Scripts\Bacteria2DController.cs" />
-    <Compile Include="Assets\Scenes\Scripts\CameraFollow.cs" />
+    <Compile Include="Assets\Scenes\Scripts\CheckCollisionEnemy.cs" />
+    <Compile Include="Assets\Scenes\Scripts\EnemyMovement.cs" />
     <Compile Include="Assets\Scenes\Scripts\CheckCollisionCollectable.cs" />
+    <Compile Include="Assets\Scenes\Scripts\Bacteria2DController.cs" />
     <Compile Include="Assets\Scenes\Scripts\StateManager.cs" />
+    <Compile Include="Assets\Scenes\Scripts\CameraFollow.cs" />
+    <Compile Include="Assets\CheckCollisionWithOtherEnemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
